this is my love

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    amar sonar bagla ami tomake valobashi
+                </li>
+            </ul>
+        </nav>
 
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
